Update: now remember the main form's size, and fix historic min/max value of price

--- a/SimcompaniesHelper.Winform/Properties/Settings.settings
+++ b/SimcompaniesHelper.Winform/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="AutoRefresh" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="MainFormWidth" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">559</Value>
+    </Setting>
+    <Setting Name="MainFormHeight" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">536</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
